# pISSgraph

./: .dockerignore  .env.example  .gitignore  README.md  compose.yaml
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
backend/pissgraph/: api.py  database.py  export_openapi.py  main.py  telemetry.py
frontend/: .dockerignore  .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: TelemetryChart.tsx
scripts/: generate-openapi.sh
